--- a/static/css/karate.css
+++ b/static/css/karate.css
@@ -131,6 +131,82 @@ ul.big-list > li {
     margin-bottom: 1em;
 }
 
+.thumbnail-row {
+    margin: 0px;
+}
+
+.thumbnail-col {
+    padding: 0 15px;
+    width: auto;
+    max-width: 50%;
+}
+@media (max-width: 450px) {
+   .thumbnail-col {
+        padding: 0px;
+    }
+}
+
+.thumbnail {
+    position: relative;
+}
+
+.thumbnail:hover {
+    background: #ffa;
+}
+
+.thumbnail:hover > .thumbnail-overlay > p {
+    color: black;
+    background: rgba(255, 255, 170, 0.7);
+}
+
+.thumbnail > img {
+    max-height: 170px;
+}
+
+.thumbnail-overlay {
+    position: absolute;
+    z-index: 1000;
+
+    top: 70%;
+    left: 0;
+    width: 100%;
+
+    overflow: hidden;
+}
+@media (max-width: 450px) {
+   .thumbnail-overlay {
+        font-size: 1em;
+    }
+}
+
+.thumbnail-overlay > p {
+    color: white;
+    background: rgba(30, 30, 30, 0.7);
+    font-size: 1.5em;
+    text-align: center;
+    margin: 0 15px;
+}
+@media (max-width: 450px) {
+   .thumbnail-overlay > p {
+        font-size: 1em;
+        margin: 0 4px;
+    }
+}
+
+img.quote-icon {
+    height: 64px;
+    width: 64px;
+    float: left;
+}
+
+.quote-box {
+    background: white;
+}
+.quote-box > p {
+    text-align: right;
+    padding: 1em;
+}
+
 .boxShadow--sm {
     border: 0px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
