--- a/static/css/karate.css
+++ b/static/css/karate.css
@@ -33,6 +33,15 @@ body {
     background: url('https://i.imgur.com/qFtA9Vq.jpg') repeat 0 0;
 }
 
+
+.mobile-hidden {
+}
+@media (max-width: 650px) {
+    .mobile-hidden {
+        display: none;
+    }
+}
+
 .pretty-image {
     height: 15em;
     margin: 10px;
